--- a/list.html
+++ b/list.html
@@ -13,7 +13,7 @@
     <h1 class="text-center text-primary mt-5 text-decoration-underline">ASIA</h1>
 
     <div class="d-grid gap-2 col-6 mx-auto mt-5">
-        <a class="btn btn-warning btn-lg" href="#" role="button">Alila</a>
+        <a class="btn btn-warning btn-lg" href="/list/alila/alila.html" role="button">Alila</a>
         <a class="btn btn-warning btn-lg" href="#" role="button">Salsa</a>
     </div>
 
