--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>File</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <script type='text/javascript' src='//pl25991706.effectiveratecpm.com/d4/8f/80/d48f8008bdf94892e915b7974f0c7ed4.js'></script>
 </head>
 
 <body>
