--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>File</title>
+    <title>Pink List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <script type='text/javascript' src='//pl25991706.effectiveratecpm.com/d4/8f/80/d48f8008bdf94892e915b7974f0c7ed4.js'></script>
 </head>
 
 <body>
+    
     <h1 class="text-center text-danger mt-5">Warning!!</h1>
     <h5 class="text-center mt-5">Please don't save links in <strong class="text-danger">Browser</strong> or in <strong class="text-danger">Cookies</strong> so as not to be detected by the System Server</h5>
+    <h1 class="text-center text-primary mt-5 text-decoration-underline">LIST ASIA</h1>
 
     <div class="d-grid gap-2 col-6 mx-auto mt-5">
-        <a class="btn btn-primary btn-lg" href="/list.html" role="button">ASIA</a>
+        <a class="btn btn-warning btn-lg" href="/list/alila/alila.html" role="button">Alila</a>
+        <a class="btn btn-warning btn-lg" href="#" role="button">Salsa</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
