--- a/list/alila/alila.html
+++ b/list/alila/alila.html
@@ -10,11 +10,104 @@
 </head>
 
 <body>
-    <h1 class="text-center text-dark mt-5">Alila</h1>
+    <div class="container">
+        <h3 class="text-center fw-bold">Alila</h3>
+        <h4 class="text-center text-danger fw-bold">KLIK Gambar untuk menonton Video.</h4>
+        <div class="gallery">
+            <!-- Image -->
+            <!--
+            <img src="" alt="alila">
+            -->
 
-    <div class="relative w-full max-w-lg mx-auto">
-        <video id="videoPlayer" src="video/alila.mp4" class="w-full h-auto max-w-full" controls playsinline></video>
+            <!-- Video Gallery -->
+            <video class="video-thumbnail" src="/list/alila/video/alila.mp4" poster="/list/alila/img/alila.png" ></video>
+
+        </div>
     </div>
+
+    <div class="modal" id="modal">
+        <img id="modal-img" src="" alt="Zoomed Image">
+        <video id="modal-video" controls style="display: none;"></video>
+    </div>
+
+    <style>
+        /* Atur galeri agar media berjajar */
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+
+        /* Gaya untuk gambar dan video thumbnail agar seragam */
+        .gallery img, .gallery .video-thumbnail {
+            width: 300px;
+            height: 300px;
+            object-fit: cover;
+            cursor: pointer;
+        }
+
+        /* Gaya modal */
+        .modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 1000;
+            display: none; /* Awalnya modal disembunyikan */
+        }
+
+        .modal.active {
+            display: flex;
+        }
+
+        .modal img, .modal video {
+            max-width: 90%;
+            max-height: 90%;
+        }
+    </style>
+
+    <script>
+        const modal = document.getElementById('modal');
+        const modalImg = document.getElementById('modal-img');
+        const modalVideo = document.getElementById('modal-video');
+
+        document.querySelectorAll('.gallery img, .gallery video').forEach(media => {
+            media.addEventListener('click', () => {
+                modal.classList.add('active');
+
+                // Jika media adalah gambar
+                if (media.tagName === 'IMG') {
+                    modalImg.style.display = 'block';
+                    modalImg.src = media.src;
+
+                    modalVideo.style.display = 'none';
+                    modalVideo.src = "";
+                    modalVideo.pause();
+                } 
+                // Jika media adalah video
+                else if (media.tagName === 'VIDEO') {
+                    modalVideo.style.display = 'block';
+                    modalVideo.src = media.src;
+                    modalVideo.play();
+
+                    modalImg.style.display = 'none';
+                    modalImg.src = "";
+                }
+            });
+        });
+
+        modal.addEventListener('click', () => {
+            modal.classList.remove('active');
+            modalImg.src = "";
+            modalVideo.pause();
+            modalVideo.src = "";
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
