--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <!--SocialBar Adsterra-->
+    <script type='text/javascript' src='//manuscriptfelt.com/e0/59/a3/e059a3be076b9f2238bb33074077a6d0.js'></script>
 </body>
 
 </html>
