--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="d-grid gap-2 col-6 mx-auto mt-5">
         <a class="btn btn-warning btn-lg" href="/list/alila/alila.html" role="button">Alila</a>
-        <a class="btn btn-warning btn-lg" href="#" role="button">Salsa</a>
+        <a class="btn btn-warning btn-lg" href="/list/salsa/salsa.html" role="button">Salsa</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
